src/pyautoeios/eios.py

"""
WIP: A Python wrapper for Brandons RemoteInput/Reflection for OSRS 

Resources:
    Definitions of functions from headers: 
        https://gist.github.com/Brandon-T/530ffc8780920dc12919af8d15ebac3f
    Hex code constants: 
        https://gist.github.com/kkusch/245bb80ec4e7ab4d8cdc6b7eeb3f330f#file-hex_keycodes-py
    ctypes: 
        https://docs.python.org/3/library/ctypes.html

Working: (tested with vanilla client)
    [x] EIOS_GainFocus
    [x] EIOS_GetClientPID
    [x] EIOS_GetClients
    [x] EIOS_GetMousePosition
    [x] EIOS_GetRealMousePosition
    [x] EIOS_GetTargetDimensions
    [x] EIOS_HasFocus
    [x] EIOS_HoldKey
    [x] EIOS_HoldMouse
    [x] EIOS_Inject
    [x] EIOS_LoseFocus
    [x] EIOS_MoveMouse
    [x] EIOS_PairClient
    [x] EIOS_ReleaseKey
    [x] EIOS_ReleaseMouse
    [x] EIOS_ReleaseTarget
    [x] EIOS_SendString

TODO:

    [ ] Functions that still need tested:
        [x] EIOS_GetImageBuffer 
        [ ] EIOS_GetDebugImageBuffer 
        [ ] EIOS_SetGraphicsDebugging 
        [ ] EIOS_UpdateImageBuffer 
        [ ] EIOS_ScrollMouse 
        [x] EIOS_IsMouseButtonHeld 
            ERRORS: can't import. throws the error: 
            `AttributeError: function 'EIOS_IsMouseButtonHeld' not found`
        [ ] EIOS_IsKeyHeld
        [ ] EIOS_GetKeyboardSpeed
        [ ] EIOS_SetKeyboardSpeed
        [ ] EIOS_GetKeyboardRepeatDelay
        [ ] EIOS_SetKeyboardRepeatDelay
        [ ] EIOS_KillClientPID
        [ ] EIOS_KillClient
        [ ] EIOS_KillZombieClients
        [ ] Reflect_GetEIOS
    
    [ ] Functions that still need written:
        [x] Reflect_Object
        [ ] Reflect_IsSame_Object
        [ ] Reflect_InstanceOf
        [x] Reflect_Release_Object
        [ ] Reflect_Release_Objects
        [x] Reflect_Bool
        [x] Reflect_Char
        [x] Reflect_Byte
        [x] Reflect_Short
        [x] Reflect_Int
        [x] Reflect_Long
        [ ] Reflect_Float
        [ ] Reflect_Double
        [x] Reflect_String
        [ ] Reflect_Array
        [ ] Reflect_Array_With_Size
        [ ] Reflect_Array_Size
        [ ] Reflect_Array_Index
        [ ] Reflect_Array_Index2D
        [ ] Reflect_Array_Index3D
        [ ] Reflect_Array_Index4D
        [ ] Reflect_Array_Indices
"""

import ctypes
from enum import Enum
import platform
from typing import Tuple, List

try:
    from importlib.resources import files

    _LIB_DIR = files(__package__) / "lib"
except ImportError:
    import pkg_resources
    import pathlib

    _LIB_DIR = pathlib.Path(pkg_resources.resource_filename(__package__, "lib"))

import psutil

from pyautoeios.hooks import THook

EIOSPtr = ctypes.c_void_p
JObject = ctypes.c_void_p
JArray = ctypes.c_void_p
ClientOffset = ctypes.c_int
PID = ctypes.c_int
KeyCode = ctypes.c_int32
Coordinate = ctypes.c_int32
MouseButton = ctypes.c_int32
IntPtr = ctypes.POINTER(ctypes.c_int32)
cstr = ctypes.c_char_p


CLIENTS = ["JagexLauncher.exe", "RuneLite.exe", "OpenOSRS.exe"]


class ReflectionArrayType(Enum):
    RI_CHAR = 0
    RI_BYTE = 1
    RI_BOOLEAN = 2
    RI_SHORT = 3
    RI_INT = 4
    RI_LONG = 5
    RI_FLOAT = 6
    RI_DOUBLE = 7
    RI_STRING = 8
    RI_OBJECT = 9


def get_client_pids() -> dict:
    return {
        process.info["pid"]
        for process in psutil.process_iter(["pid", "name"])
        if process.info["name"] in CLIENTS
    }


class EIOS:
    """Class to wrap the remoteinput methods."""

    _clients = {}
    """classvariable to hold the list of clients PIDS and their EIOS pointers"""

    _objects = {}
    """classvariable to track all object pointers, so they can be free'd"""

    # on windows we need to use _stdcall for methods from Plugin.hxx
    if platform.system() == "Windows":
        # checking the size of byte is is the most reliable method for determining
        # whether the python interpeter is 32 bit or not
        if ctypes.sizeof(ctypes.c_void_p) == 4:
            _dll_file = "libRemoteInput-i686.dll"
        else:
            _dll_file = "libRemoteInput-x86_64.dll"
        _cdecl = ctypes.CDLL(str(_LIB_DIR / _dll_file))
        _stdcall = ctypes.WinDLL(str(_LIB_DIR / _dll_file))

    # on non-windows platforms, we can always use a CDLL, so set both variables
    # to the same DLL
    elif platform.system() == "Darwin":
        _cdecl = _stdcall = ctypes.CDLL(str(_LIB_DIR / "libRemoteInput-x86_64.dylib"))

    else:
        _cdecl = _stdcall = ctypes.CDLL(str(_LIB_DIR / "libRemoteInput-x86_64.so"))

    """_cdecl & _stdcall are classvariable as libraries only need loaded once

    methods from `Plugin.hxx` uses _stdcall (windows only)
    methods from `EIOS.hxx` uses _cdecl (all platforms)
    """

    def __init__(self, pid=None):
        self._eios_ptr = None
        """pointer for the EIOS binding to the DLL"""

        self._pid = None
        """pid for the rs client"""

        # if an explict pid wasn't passed, find the first pid, that isn't
        # already bound to a client. assume any pid
        # not alreadyu in our class variable as an "unbound" pid.
        if not pid:
            pids = get_client_pids()
            for p in pids:
                if p not in self._clients.keys():
                    pid = p
                    break
            if pid is None:
                raise IOError(f"All {len(pids)} clients already bound to.")

        # if an explict pid is passed, still check for it.
        elif pid in self._clients.keys():
            raise IOError("That Client is already paired")

        self._pid = pid
        self._EIOS_Inject_PID(pid)
        self._eios_ptr = self._EIOS_PairClient(pid)
        if self._eios_ptr == 0:
            raise IOError("Couldn't find an available client.")

        self._clients[pid] = self._eios_ptr
        self._objects[pid] = {}
        """An individual dict for just this client's object pointers"""

    def __del__(self):
        """Free object pointers during garbage collection.

        We track each object we reflect when the object is created.
            Although each object *should* free itself when it leave scope
            with the RSTRype.__del__, we add an extra one here at the EIOS
            level to catch any that left hanging, such as is the case with
            circular references. in normal execution, the EIOS will always
            clear, so its the last stand against memory leaks.
        """
        if self._pid:
            print(f"unpairing client EIOS({self._pid})")
            for ref in self._objects.pop(self._pid).keys():
                print(f"freeing {ref}")
                self._Reflect_Release_Object(ref)
            self._clients.pop(self._pid)
        if self._eios_ptr:
            self._EIOS_ReleaseTarget()

    def __str__(self):
        """Simple string repreentation."""
        return f"EIOS({self._pid})"

    def __repr__(self):
        """Simple string repreentation."""
        return f"EIOS({self._pid})"

    _stdcall.EIOS_RequestTarget.restype = EIOSPtr
    _stdcall.EIOS_RequestTarget.argtypes = [cstr]

    def _EIOS_RequestTarget(self, initstr: str) -> EIOSPtr:
        """Wrap EIOS_RequestTarget.

        EIOS* EIOS_RequestTarget(
            const char* initargs
        ) noexcept;
        """
        return self._stdcall.EIOS_RequestTarget(bytes(initstr, encoding="utf8"))

    _stdcall.EIOS_ReleaseTarget.restype = None
    _stdcall.EIOS_ReleaseTarget.argtypes = [EIOSPtr]

    def _EIOS_ReleaseTarget(self) -> None:
        """Wrap EIOS_ReleaseTarget.

        void EIOS_ReleaseTarget(
            EIOS* eios
        ) noexcept;
        """
        self._stdcall.EIOS_ReleaseTarget(self._eios_ptr)

    _stdcall.EIOS_GetTargetDimensions.restype = None
    _stdcall.EIOS_GetTargetDimensions.argtypes = [EIOSPtr, IntPtr, IntPtr]

    def _EIOS_GetTargetDimensions(self) -> Tuple[int, int]:
        """Wrap EIOS_GetTargetDimensions.

        void EIOS_GetTargetDimensions(
            EIOS* eios, std::int32_t* width, std::int32_t* height
        ) noexcept;
        :return: width, height
        """
        width = ctypes.c_int32()
        height = ctypes.c_int32()
        self._stdcall.EIOS_GetTargetDimensions(
            self._eios_ptr, ctypes.byref(width), ctypes.byref(height)
        )
        return (width.value, height.value)

    _stdcall.EIOS_GetImageBuffer.restype = ctypes.POINTER(ctypes.c_uint8)
    _stdcall.EIOS_GetImageBuffer.argtypes = [EIOSPtr]

    def _EIOS_GetImageBuffer(self):
        """Wrap EIOS_GetImageBuffer.

        std::uint8_t* EIOS_GetImageBuffer(
            EIOS* eios
        ) noexcept;
        """
        buffer = self._stdcall.EIOS_GetImageBuffer(self._eios_ptr)
        return buffer

    _stdcall.EIOS_GetDebugImageBuffer.restype = ctypes.POINTER(ctypes.c_uint8)
    _stdcall.EIOS_GetDebugImageBuffer.argtypes = [EIOSPtr]

    def _EIOS_GetDebugImageBuffer(self):
        """Wrap EIOS_GetDebugImageBuffer.

        std::uint8_t* EIOS_GetDebugImageBuffer(
            EIOS* eios
        ) noexcept;
        """
        buffer = self._stdcall.EIOS_GetDebugImageBuffer(self._eios_ptr)
        return buffer

    _stdcall.EIOS_SetGraphicsDebugging.restype = None
    _stdcall.EIOS_SetGraphicsDebugging.argtypes = [EIOSPtr, ctypes.c_bool]

    def _EIOS_SetGraphicsDebugging(self, enabled: bool):
        """Wrap EIOS_SetGraphicsDebugging.

        void EIOS_SetGraphicsDebugging(
            EIOS* eios, bool enabled
        ) noexcept;
        """
        self._stdcall.EIOS_SetGraphicsDebugging(self._eios_ptr, enabled)

    _stdcall.EIOS_UpdateImageBuffer.restype = None
    _stdcall.EIOS_UpdateImageBuffer.argtypes = [EIOSPtr]

    def _EIOS_UpdateImageBuffer(self) -> None:
        """Wrap EIOS_UpdateImageBuffer.

        void EIOS_UpdateImageBuffer(
            EIOS* eios
        ) noexcept;
        """
        self._stdcall.EIOS_UpdateImageBuffer(self._eios_ptr)

    _stdcall.EIOS_HasFocus.restype = ctypes.c_bool
    _stdcall.EIOS_HasFocus.argtypes = [EIOSPtr]

    def _EIOS_HasFocus(self) -> bool:
        """Wrap EIOS_HasFocus.

        bool EIOS_HasFocus(
            EIOS* eios
        ) noexcept;
        """
        return self._stdcall.EIOS_HasFocus(self._eios_ptr)

    _stdcall.EIOS_GainFocus.restype = None
    _stdcall.EIOS_GainFocus.argtypes = [EIOSPtr]

    def _EIOS_GainFocus(self) -> None:
        """Wrap EIOS_GainFocus.

        void EIOS_GainFocus(
            EIOS* eios
        ) noexcept;
        """
        self._stdcall.EIOS_GainFocus(self._eios_ptr)

    _stdcall.EIOS_LoseFocus.restype = None
    _stdcall.EIOS_LoseFocus.argtypes = [EIOSPtr]

    def _EIOS_LoseFocus(self) -> None:
        """Wrap EIOS_LoseFocus.

        void EIOS_LoseFocus(
            EIOS* eios
        ) noexcept;
        """
        self._stdcall.EIOS_LoseFocus(self._eios_ptr)

    _stdcall.EIOS_IsInputEnabled.restype = ctypes.c_bool
    _stdcall.EIOS_IsInputEnabled.argtypes = [EIOSPtr]

    def _EIOS_IsInputEnabled(self) -> bool:
        """Wrap EIOS_IsInputEnabled.

        bool EIOS_IsInputEnabled(
            EIOS* eios
        ) noexcept;
        """
        return self._stdcall.EIOS_IsInputEnabled(self._eios_ptr)

    _stdcall.EIOS_SetInputEnabled.restype = None
    _stdcall.EIOS_SetInputEnabled.argtypes = [EIOSPtr, ctypes.c_bool]

    def _EIOS_SetInputEnabled(self, enabled: bool) -> None:
        """Wrap EIOS_SetInputEnabled.

        void EIOS_SetInputEnabled(
            EIOS* eios, bool enabled
        ) noexcept;
        """
        self._stdcall.EIOS_SetInputEnabled(self._eios_ptr, enabled)

    _stdcall.EIOS_GetMousePosition.restype = None
    _stdcall.EIOS_GetMousePosition.argtypes = [EIOSPtr, IntPtr, IntPtr]

    def _EIOS_GetMousePosition(self) -> Tuple[int, int]:
        """Wrap EIOS_GetMousePosition.
